runTrain & fix cov function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(anomaly_detector)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(anomaly_detector main.cpp anomaly_detection_util.cpp anomaly_detection_util.h)
+add_executable(anomaly_detector anomaly_detection_util.cpp anomaly_detection_util.h MainTrain.cpp)
