--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(anomaly_detector)
+project(timeseries)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(anomaly_detector anomaly_detection_util.cpp anomaly_detection_util.h MainTrain.cpp)
+add_executable(timeseries testCSV.csv timeseries.cpp timeseries.h main.cpp)
