--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(timeseries)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(timeseries testCSV.csv timeseries.cpp timeseries.h main.cpp)
+add_executable(timeseries testCSV.csv SimpleAnomalyDetector.cpp SimpleAnomalyDetector.h anomaly_detection_util.cpp
+        anomaly_detection_util.h timeseries.cpp timeseries.h MainTrain.cpp)
