add min circle and hybridAnomalyDetector
still have some ideas but for now:
-made virtual isExeptional to fit the circle case(maybe we can just do distance by claculating it smartly before) and then no need to cahage it
-

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(timeseries)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(timeseries testCSV.csv SimpleAnomalyDetector.cpp SimpleAnomalyDetector.h anomaly_detection_util.cpp
-        anomaly_detection_util.h timeseries.cpp timeseries.h MainTrain.cpp)
+        anomaly_detection_util.h timeseries.cpp timeseries.h MainTrain.cpp minCircle.cpp minCircle.h HybridAnomalyDetector.cpp HybridAnomalyDetector.h)
