--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,12 @@ project(timeseries)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(timeseries testCSV.csv SimpleAnomalyDetector.cpp SimpleAnomalyDetector.h anomaly_detection_util.cpp
-        anomaly_detection_util.h timeseries.cpp timeseries.h MainTrain.cpp)
+include_directories(.)
+
+add_executable(timeseries
+        anomaly_detection_util.cpp
+        anomaly_detection_util.h
+        minCircle.cpp
+        minCircle.h
+        CircleTest.cpp)
+
