changed double to float

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,22 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
+#add_executable(timeseries
+#        anomaly_detection_util.cpp
+#        anomaly_detection_util.h
+#        minCircle.cpp
+#        minCircle.h
+#        CircleTest.cpp)
+
 add_executable(timeseries
         anomaly_detection_util.cpp
         anomaly_detection_util.h
         minCircle.cpp
         minCircle.h
-        CircleTest.cpp)
-
+        timeseries.cpp
+        timeseries.h
+        SimpleAnomalyDetector.cpp
+        SimpleAnomalyDetector.h
+        HybridAnomalyDetector.cpp
+        HybridAnomalyDetector.h
+        MainTrain.cpp)
