fixed cmake and formatting for delivering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(timeseries)
 set(CMAKE_CXX_STANDARD 14)
 
 
-include_directories(.)
+#include_directories(.)
 
 #add_executable(timeseries
 #        anomaly_detection_util.cpp
